# rustos

./: .gitignore  .gitmodules  Cargo.toml  README.md
boot/: qemu.sh
boot/src/: main.rs
doc/: build-graphs.sh  structure-ownership.gv
kern/: CMakeLists.txt  Cargo.toml  Makefile  c232hm-ddhsl-0.cfg  combined-rpi3.cfg  disable-mac-ftdi.sh  generate_frame.py  heatmap_pc.py  mem_monitor.py  qemu.sh  rpi3.cfg  run-openocd.sh  set-nightly.sh  uboot.ini  uboot_img.its
kern/.cargo/: config  layout.ld
kern/kern-image/: Dockerfile  build-image.sh  linux-build-image.sh
kern/misc/: meson-g12b-a311d-khadas-vim3.dts
kern/src/: allocator.rs  arm.rs  cls.rs  collections.rs  compat.rs  console.rs  debug.rs  device_tree.rs  display_manager.rs  driver.rs  dummy.c  fs.rs  fs2.rs  hw.rs  hyper.rs  init.rs  io.rs  iosync.rs  kernel.rs  logger.rs  main.rs  mbox.rs  mini_allocators.rs  mutex.rs  net.rs  param.rs  perf.rs  process.rs  shell.rs  smp.rs  sync.rs  timing.rs  traps.rs  usb.rs  vm.rs
kern/src/allocator/: bin.rs  bump.rs  mod.rs  tags.rs  tests.rs
kern/src/display/: mod.rs  text.rs
kern/src/driver/: mod.rs
kern/src/driver/net/: dwmac.rs  mod.rs
kern/src/fs/: handle.rs  mod.rs  proc.rs  sd.rs  service.rs
kern/src/init/: panic.rs  vectors.s
kern/src/kernel_call/: mod.rs  syscall.rs
kern/src/net/: arp.rs  buffer.rs  ether.rs  icmp.rs  ipv4.rs  mod.rs  physical.rs  tcp.rs  udp.rs  util.rs
kern/src/pigrate/: bundle.rs  mod.rs
kern/src/pigrate_server/: mod.rs
kern/src/process/: address_space.rs  fd.rs  hyper.rs  kernel.rs  mailbox.rs  mod.rs  process.rs  scheduler.rs  snap.rs  stack.rs  state.rs
kern/src/shell/: command.rs  command_args.rs  default_commands.rs  mod.rs  shell.rs  shortcut.rs
kern/src/shell/default_commands/: mem.rs  net.rs
kern/src/sync/: atomic_list.rs  atomic_registry.rs  mod.rs
kern/src/tasks/: core_balancing.rs  mod.rs  net.rs
kern/src/traps/: coreinfo.rs  frame.rs  hyper.rs  hypercall.rs  irq.rs  kernel.rs  mod.rs  syndrome.rs  syscall.rs
kern/src/traps/frame/: gen.rs
kern/src/virtualization/: broadcom.rs  data_access.rs  mod.rs  nic.rs
kern/src/vm/: address.rs  mod.rs  pagetable.rs
lib/aarch64/src/: asm.rs  attr.rs  lib.rs  macros.rs  regs.rs  semi.rs  sp.rs  vmsa.rs
lib/common/: Cargo.toml
lib/common/src/: fmt.rs  lib.rs  mutex.rs  smp.rs
lib/dwmac/: Cargo.toml
lib/dwmac/src/: common_h.rs  descs_h.rs  dma.rs  dma_h.rs  dwmac_h.rs  lib.rs  mac_h.rs  mdio.rs  meson8b.rs  volatile.rs
lib/fat32/: Cargo.toml
lib/fat32/src/: lib.rs  mbr.rs
lib/fat32/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  fat.rs  file.rs  metadata.rs  mnt.rs  mod.rs  vfat.rs
lib/karch/: Cargo.toml
lib/karch/src/: capability.rs  lib.rs
lib/kernel_api/: gen_syscall_wrappers.py
lib/kernel_api/src/: hypercall.rs  hypercall_macros.rs  lib.rs  syscall.rs  syscall_macros.rs
lib/khadas/: Cargo.toml
lib/khadas/src/: gpio.rs  irq.rs  lib.rs  uart.rs
lib/kscheduler/: Cargo.toml
lib/kscheduler/src/: lib.rs  wqs.rs
lib/mini-alloc/: Cargo.toml
lib/mini-alloc/src/: lib.rs  minibox.rs  mutex.rs
lib/mini-alloc/src/allocator/: bump.rs  mod.rs  util.rs
lib/mountfs/: Cargo.toml
lib/mountfs/src/: fs.rs  lib.rs  meta.rs  mount.rs  null.rs
lib/mountfs/src/mount/: metadata.rs  mfs.rs
lib/mpalloc/: Cargo.toml
lib/mpalloc/src/: lib.rs
lib/pi/: Cargo.toml
lib/pi/src/: common.rs  dma.rs  gpio.rs  interrupt.rs  lib.rs  mbox.rs  pm.rs  timer.rs  types.rs  uart.rs  usb.rs
lib/pi/src/atags/: atag.rs  mod.rs  raw.rs
lib/pictl/: Cargo.toml
lib/pictl/src/: main.rs
lib/pigrate-core/: Cargo.toml
lib/pigrate-core/src/: bundle.rs  error.rs  frame.rs  lib.rs  message.rs  stream.rs
lib/shim/: Cargo.toml
lib/shim/src/: lib.rs  no_std.rs
lib/shutil/: Cargo.toml
lib/shutil/src/: lib.rs
lib/small_io/: Cargo.toml
lib/small_io/src/: lib.rs
lib/stack-vec/src/: lib.rs
lib/tracing/: Cargo.toml  build.rs
lib/tracing/schema/: tracestreaming.capnp
lib/tracing/src/: lib.rs
lib/ttywrite/src/: main.rs
lib/volatile/src/: lib.rs
lib/xmodem/src/: lib.rs  progress.rs  read_ext.rs  tests.rs
tut/0-rustlings/exercises/: test1.rs  test4.rs
tut/0-rustlings/exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs  using_as.rs
tut/0-rustlings/exercises/cs140e/: borrow-1.rs  borrow-2.rs  builder.rs  derive.rs  expressions.rs  io-read-write.rs  lifetimes-2.rs  lifetimes-3.rs  lifetimes-4.rs  mutability-1.rs  mutability-2.rs  pattern-match-1.rs  privacy.rs  semi.rs  trait-impl.rs  trait-namespace.rs  try.rs  ufcs.rs
tut/0-rustlings/exercises/enums/: enums2.rs  enums3.rs
tut/0-rustlings/exercises/error_handling/: errors2.rs  errorsn.rs  option1.rs
tut/0-rustlings/exercises/functions/: functions1.rs  functions3.rs
tut/0-rustlings/exercises/iterators/: iterators2.rs  (+2 more)
tut/1-blinky/phase3/: Makefile  blinky.c  layout.ld
tut/1-blinky/phase4/: Cargo.toml  Makefile
tut/2-shell/questions/: 1-blinky  bad-tests  blinky-states  bootloader-timeout  clone-for-pop  deref-in-tests  drop-container  enforcing  fake-states  invalid  led-pattern  lifetime  macros  push-fails  restricted-reads  shell-lookback  small-kernels  unique-volatile  write-fmt
tut/3-fs/questions/: atag-cmdline  atag-mem  bin-about  bin-frag  bump-chain  enduser-unsafe  foreign-safety  foreign-sync  lfn-identity  libc-align  ll-alloc  mangling  manual-lookup  max-clusters  max-file-size  mbr-magic  onus  undefined-behavior
tut/4-multi/questions/: Deref  arm-aarch32  arm-el  arm-int  arm-mask  arm-pc  arm-sp-el  arm-svc  arm-x30  asm-cbz  asm-memcpy  asm-movk  init  isolated-stacks  kernel-distrust  lazy-float  lazy-stacks  new-state  reentrant-irq  sleep-elapsed  stack-drop  stack-size  syscall-error  translation-control  wait-queue  wfe  which-table
tut/5-multicore/questions/: atomic-handson  berkeley-socket  cntpns-clear  consistency-handson  context-restore-barrier  descriptor-design  multicore-performance  mutex-bad-state  mutex-design  spin-address
user/long/: Cargo.toml
user/long/src/: main.rs
user/sleep/src/: main.rs
(+8 files in other folders)
