[package]
name = "kernel"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[package.metadata.cargo-xbuild]
memcpy = true

[dependencies]
pi = { path = "../lib/pi" }
shim = { path = "../lib/shim", features = ["no_std", "alloc"] }
stack-vec = { path = "../lib/stack-vec/" }
fat32 = { path = "../lib/fat32/", features = ["no_std"] }
mountfs = { path = "../lib/mountfs/", features = ["no_std"] }
aarch64 = { path = "../lib/aarch64/" }
kernel_api = { path = "../lib/kernel_api" }
pigrate-core = { path = "../lib/pigrate-core" }
compression = { version = "0.1", default-features = false, features = ["gzip", "bzip2", "deflate", "lzss"] }
hex = { version = "0.4.2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = { version = "0.4.8", features = [] }
serde = { version = "1.0.106", default-features = false, features = ["alloc", "derive"] }
serde_cbor = { version = "0.11.1", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.6.3", features = ["serde"] }
modular-bitfield = "0.6.0"

[dev-dependencies]
shim = { path = "../lib/shim", features = ["alloc"] }
