[package]
name = "kernel"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[package.metadata.cargo-xbuild]
memcpy = true

[profile.release]
debug = true

[dependencies]
common = { path = "../lib/common" }
mini-alloc = { path = "../lib/mini-alloc" }
pi = { path = "../lib/pi" }
shutil = { path = "../lib/shutil" }
shim = { path = "../lib/shim", features = ["no_std", "alloc"] }
stack-vec = { path = "../lib/stack-vec/" }
fat32 = { path = "../lib/fat32/", features = ["no_std"] }
mountfs = { path = "../lib/mountfs/", features = ["no_std"] }
aarch64 = { path = "../lib/aarch64/" }
kernel_api = { path = "../lib/kernel_api" }
pigrate-core = { path = "../lib/pigrate-core" }

addr2line = { version = "0.12.1", default-features = false, features = ["rustc-demangle"] }
compression = { version = "0.1", default-features = false, features = ["gzip", "bzip2", "deflate", "lzss"] }
# elfloader = "0.10.0"
enumset = "1.0.0"
font8x8 = { version = "0.2.5", default-features = false, features = ["unicode"] }
gimli = { version = "0.21.0", default-features = false, features = ["read"] }
hex = { version = "0.4.2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = { version = "0.4.8", features = [] }
rand = { version = "0.7.3", default-features = false, features = ["alloc"] }
rand_xorshift = "0.2.0"
serde = { version = "1.0.106", default-features = false, features = ["alloc", "derive"] }
serde_cbor = { version = "0.11.1", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.6.3", features = ["serde"] }
modular-bitfield = "0.6.0"
xmas-elf = "0.7.0"

[dev-dependencies]
shim = { path = "../lib/shim", features = ["alloc"] }

