[package]
name = "common"
version = "0.1.0"
authors = ["wgulian3 <wgulian@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64 = { path = "../aarch64/" }
log = { version = "0.4.8", features = [] }
shim = { path = "../shim", features = ["alloc"] }

[features]
no_std = ["shim/no_std"]
