[package]
name = "dwmac"
version = "0.1.0"
authors = ["wgulian3 <wgulian@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.8", features = [] }
mini-alloc = { path = "../mini-alloc" }
pretty-hex = "0.1.1"
