[package]
name = "fat32"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[dependencies]
common = { path = "../common", features = ["no_std"] }
downcast-rs = { version = "1.2.0", default-features = false }
hashbrown = "0.6.3"
mountfs = { path = "../mountfs", features = ["no_std"] }
shim = { path = "../shim", features = ["alloc"] }

[dev-dependencies]
rand = "0.4"

[features]
no_std = ["shim/no_std"]
