[package]
name = "khadas"
version = "0.1.0"
authors = ["wgulian3 <wgulian@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-alloc = { path = "../mini-alloc" }
volatile = { path = "../volatile" }
shim = { path = "../shim", features = ["no_std"] }
aarch64 = { path = "../aarch64" }
karch = { path = "../karch" }

dtb = { version = "0.2.0", default-features = false }
log = { version = "0.4.8", features = [] }