[package]
name = "kscheduler"
version = "0.1.0"
authors = ["wgulian3 <wgulian@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsx = { path = "../dsx", features = [], default-features = false }

hashbrown = { version = "0.6.3", features = [] }
