[package]
name = "mini-alloc"
version = "0.1.0"
authors = ["wgulian3 <wgulian@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64 = { path = "../aarch64/" }
shim = { path = "../shim", features = ["no_std"] }
