[package]
name = "mountfs"
version = "0.1.0"
authors = ["wgulian3 <wgulian@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shim = { path = "../shim", features = ["alloc"] }
hashbrown = "0.6.3"
log = { version = "0.4.8", features = [] }

[features]
no_std = ["shim/no_std"]
