[package]
name = "mountfs"
version = "0.1.0"
authors = ["wgulian3 <wgulian@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = { version = "1.2.0", default-features = false }
hashbrown = "0.6.3"
log = { version = "0.4.8", features = [] }
shim = { path = "../shim", features = ["alloc"] }
spin = "0.5.2"

[features]
no_std = ["shim/no_std"]
