[package]
name = "pi"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[dependencies]
mini-alloc = { path = "../mini-alloc" }
volatile = { path = "../volatile" }
shim = { path = "../shim", features = ["no_std"] }
aarch64 = { path = "../aarch64" }
