[package]
name = "pictl"
version = "0.1.0"
authors = ["wgulian3 <wgulian@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compression = { version = "0.1" }
hashbrown = { version = "0.6.3", features = ["serde"] }
hex = { version = "0.4.2" }
pigrate-core = { path = "../pigrate-core" }
serde = { version = "1.0.106" }
serde_cbor = { version = "0.11.1" }
