[package]
name = "pigrate-core"
version = "0.1.0"
authors = ["wgulian3 <wgulian@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fat32 = { path = "../fat32/", features = ["no_std"] }
hashbrown = { version = "0.6.3", features = ["serde"] }
serde = { version = "1.0.106", default-features = false, features = ["alloc", "derive"] }
